--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,11 @@ a {
 }
 
 .primary-button {
-  @apply rounded  sm:py-2 sm:px-4 py-[0.4rem] px-2 shadow outline-none bg-slate-600 hover:bg-slate-500 active:bg-slate-400 text-[0.65rem] sm:text-xs  text-white;
+  @apply rounded  sm:py-2 sm:px-4 py-[0.4rem] px-[0.7rem] shadow outline-none bg-slate-600 hover:bg-slate-500 active:bg-slate-400 text-[0.65rem] sm:text-xs  text-white;
+}
+
+.default-button {
+  @apply rounded  sm:py-2 sm:px-4 py-[0.4rem] px-[0.7rem] shadow bg-white text-[0.65rem] sm:text-xs  text-black border-2 border-slate-500 hover:bg-slate-100;
 }
 
 .dropdown-link {
