--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,21 @@ body {
   font-family: "Noto Sans", "Roboto", Segoe UI, Helvetica Neue, sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: rgb(163, 160, 160);
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(200, 193, 193);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gray;
+  border-radius: 10px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -25,11 +40,11 @@ a {
 }
 
 .primary-button {
-  @apply rounded  sm:py-2 sm:px-4 py-[0.4rem] px-[0.7rem] outline-none bg-slate-600 enabled:hover:bg-slate-500 enabled:active:bg-slate-400 text-[0.65rem] sm:text-xs  text-white;
+  @apply rounded  sm:py-2 sm:px-4 py-[0.35rem] px-[0.6rem] outline-none bg-slate-600 enabled:hover:bg-slate-500 enabled:active:bg-slate-400 text-[0.65rem] sm:text-[0.7rem] xl:text-[0.8rem]  text-white;
 }
 
 .default-button {
-  @apply rounded  sm:py-2 sm:px-4 py-[0.4rem] px-[0.7rem] bg-white text-[0.65rem] sm:text-xs  text-black border-2 border-slate-500 hover:bg-slate-100 font-semibold;
+  @apply rounded  sm:py-2 sm:px-4 py-[0.35rem] px-[0.6rem] bg-white text-[0.65rem] sm:text-xs  text-black border-2 border-slate-500 hover:bg-slate-100 font-semibold;
 }
 
 .dropdown-link {
